worked on the report all the parcels

--- a/UI/html/parcel_delivery_order.html
+++ b/UI/html/parcel_delivery_order.html
@@ -28,7 +28,7 @@
                         <li class="dropdown list-items">
                             <a class = "dropbtn" href="">Reports</a>
                             <div class="dropdown-content">
-                                <a href="#">All parcels</a>
+                                <a href="./all_parcels.html">All parcels</a>
                                 <a href="#">Parcels delivered</a>
                                 <a href="#">Parcels in transit</a>
                             </div>
