--- a/UI/html/signIn.html
+++ b/UI/html/signIn.html
@@ -39,10 +39,15 @@
 
                 <div class="v-space"></div>
                 <div class="s-button">
-                   <a href="parcel_delivery_order.html"> <button id="sign-in-btn">Login</button> </a>
+                   <a href="./parcel_delivery_order.html"> <button id="sign-in-btn">Login</button> </a>
                 </div>
         </form>
-        <script src="../js/main.js"></script>
+        <script>
+            document.getElementById ('sign-in-btn').addEventListener ('click', (event) =>{
+            event.preventDefault();
+            window.location.href = 'parcel_delivery_order.html';
+        });
+        </script>
     </section>
 </body>
 </html>
