solve the issue of redirecting from the sign up page

--- a/UI/html/signIn.html
+++ b/UI/html/signIn.html
@@ -39,7 +39,7 @@
 
                 <div class="v-space"></div>
                 <div class="s-button">
-                   <a href="./parcel_delivery_order.html"> <button id="sign-in-btn">Login</button> </a>
+                    <button id="sign-in-btn">Login</button>
                 </div>
         </form>
         <script>
